# ChangeLog for kde-base/arts
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/kde-base/arts/Attic/ChangeLog,v 1.1 2002/04/04 20:09:22 danarmak Exp $

*arts-3.0 (4 Apr 2002)

  4 Apr 2002; Dan Armak <danarmak@gentoo.org> Changelog :

  KDE 3.0 ebuilds. Based on the well-tested kde3pre ebuild set.

*kde-2.2.2-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.